--- a/site/templates/twig/items/cxm/list/display.twig
+++ b/site/templates/twig/items/cxm/list/display.twig
@@ -12,4 +12,14 @@
 		{% include 'items/cxm/search/xref/customer/form.twig' with {'q': page.wire('input').get.text('q'), 'custID': customer.custid} %}
 	</div>
 	{% include 'items/cxm/list/customer.twig' %}
+	<div class="card-footer">
+		<div class="d-flex justify-content-between align-items-center">
+			<div></div>
+			<div>
+				<a href="{{ page.custListUrl(input.get.text('custID')) }}" class="btn btn-warning btn-sm">
+					<i class="fa fa-times" aria-hidden="true"></i> Close
+				</a>
+			</div>
+		</div>
+	</div>
 </div>
