--- a/site/templates/twig/items/cxm/search/customer/list.twig
+++ b/site/templates/twig/items/cxm/search/customer/list.twig
@@ -8,19 +8,44 @@
 	<thead>
 		<tr>
 			<th scope="col">
-				<a href="{{ page.get_sortURL('custid') }}" class="link">ID</a>
+				<a href="{{ page.get_sortURL('custid') }}" class="link">
+					ID
+					{% if page.orderby_column == 'custid' %}
+						<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
+					{% endif %}
+				</a>
 			</th>
 			<th scope="col">
-				<a href="{{ page.get_sortURL('name') }}" class="link">Name</a>
+				<a href="{{ page.get_sortURL('name') }}" class="link">
+					Name
+					{% if page.orderby_column == 'name' %}
+						<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
+					{% endif %}
+				</a>
 			</th>
 			<th scope="col">
-				<a href="{{ page.get_sortURL('city') }}" class="link">City</a>
+				<a href="{{ page.get_sortURL('city') }}" class="link">
+					City
+					{% if page.orderby_column == 'city' %}
+						<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
+					{% endif %}
+				</a>
 			</th>
 			<th scope="col">
-				<a href="{{ page.get_sortURL('state') }}" class="link">State</a>
+				<a href="{{ page.get_sortURL('state') }}" class="link">
+					State
+					{% if page.orderby_column == 'state' %}
+						<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
+					{% endif %}
+				</a>
 			</th>
 			<th scope="col">
-				<a href="{{ page.get_sortURL('zip') }}" class="link">Zip</a>
+				<a href="{{ page.get_sortURL('zip') }}" class="link">
+					Zip
+					{% if page.orderby_column == 'zip' %}
+						<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
+					{% endif %}
+				</a>
 			</th>
 		</tr>
 	</thead>
