--- a/site/templates/twig/items/upcx/form/js/classes/Alerts.js.twig
+++ b/site/templates/twig/items/upcx/form/js/classes/Alerts.js.twig
@@ -57,4 +57,21 @@ class UpcxAlerts {
 		});
 	}
 
+	unsavedChanges(callback) {
+		swal2.fire({
+			title: 'Changes have occurred!',
+			text: 'Do you want to save?',
+			icon: 'warning',
+			showCancelButton: true,
+			confirmButtonText: '<i class="fa fa-floppy-o" aria-hidden="true"></i> Yes',
+			cancelButtonText: 'No',
+		}).then((result) => { // Return True for save, false for dismiss
+			if (result.value) {
+				callback(true)
+			} else if (result.dismiss === Swal.DismissReason.cancel) {
+				callback(false);
+			}
+		});
+	}
+
 }
