--- a/site/templates/twig/items/cxm/list/customer.twig
+++ b/site/templates/twig/items/cxm/list/customer.twig
@@ -10,11 +10,19 @@
 	<thead>
 		<tr class="bg-dark text-white p-3">
 			<th class="pt-3 pb-3 align-middle">
-				<a href="{{ page.get_sortURL('custitemid') }}" class="link">Their Item ID</a>
+				<a href="{{ page.get_sortURL('custitemid') }}" class="link">Their Item ID
+					{% if page.orderby_column == 'custitemid' %}
+						<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
+					{% endif %}
+				</a>
 			</th>
 			<th class="pt-3 pb-3 align-middle">Description</th>
 			<th class="pt-3 pb-3 align-middle">
-				<a href="{{ page.get_sortURL('itemid') }}" class="link">Our Item ID</a>
+				<a href="{{ page.get_sortURL('itemid') }}" class="link">Our Item ID
+					{% if page.orderby_column == 'itemid' %}
+						<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
+					{% endif %}
+				</a>
 			</th>
 			<th class="pt-3 pb-3 align-middle">Description</th>
 			<th class="pt-3 pb-3 text-center">
