REQUEST: use Item ID / Description for heading

--- a/site/templates/twig/items/itm/itm/list.twig
+++ b/site/templates/twig/items/itm/itm/list.twig
@@ -11,7 +11,7 @@
 <table id="item-index" class="table table-bordered">
 	<thead>
 		<tr class="bg-dark text-white">
-			<th scope="col">Item / Desc</th>
+			<th scope="col">Item ID / Description</th>
 			<th scope="col">Group</th>
 			<th scope="col"></th>
 		</tr>
