REQUEST: use placeholder Search Item ID, Description

--- a/site/templates/twig/items/search-form.twig
+++ b/site/templates/twig/items/search-form.twig
@@ -1,6 +1,6 @@
 <form action="{{ page.searchURL }}" method="get" class="allow-enterkey-submit item-search">
 	<div class="input-group form-group">
-		<input class="form-control form-group inline" type="text" name="q" value="" placeholder="Search itemID" autofocus>
+		<input class="form-control form-group inline" type="text" name="q" value="" placeholder="Search Item ID, Description" autofocus>
 		<span class="input-group-btn">
 			<button type="submit" class="btn btn-light"> <i class="fa fa-search"></i> <span class="sr-only">Search</span> </button>
 		</span>
