--- a/site/templates/twig/items/upcx/form/js/classes/Form.js.twig
+++ b/site/templates/twig/items/upcx/form/js/classes/Form.js.twig
@@ -16,7 +16,7 @@ class UpcxForm {
 
 	updateItmDescription() {
 		var server   = UpcxRequests.getInstance();
-		server.getItm(inputs.itemid.val(), function(item) {
+		server.getItm(this.inputs.itemid.val(), [], function(item) {
 			if (item) {
 				$('.item-description').text(item.description);
 			}
