--- a/site/templates/twig/items/upcx/form/form.twig
+++ b/site/templates/twig/items/upcx/form/form.twig
@@ -70,10 +70,7 @@
 								'name': 'primary',
 								'value' : upc.is_primary() ? 'Y' : 'N',
 								'haskeys': true,
-								'options': {
-									'Y': 'Yes',
-									'N': 'No'
-								},
+								'options': {'Y': 'Yes', 'N': 'No'},
 								'attributes': {
 									'data-primary': upc.is_primary() ? 'true' : 'false'
 								}
