--- a/site/templates/twig/items/itm/itm-links.twig
+++ b/site/templates/twig/items/itm/itm-links.twig
@@ -5,13 +5,13 @@
 <ul class="nav nav-pills nav-justified mb-3">
 	<li class="nav-item">
 		{% if input.urlSegments()|length == 0 %}
-			<a class="nav-link active" href="#">ITM</a>
+			<a class="nav-link active" href="#">Home</a>
 		{% else %}
-			<a class="nav-link" href="{{ page.itmUrl(input.get.text('itemID')) }}">ITM</a>
+			<a class="nav-link" href="{{ page.itmUrl(input.get.text('itemID')) }}">Home</a>
 		{% endif %}
 	</li>
 	{% for function, title in page.subfunctions() %}
-		<li class="nav-item">
+		<li class="nav-item border">
 			{% if segments[1] == function %}
 				<a class="nav-link active" href="#">{{ title }}</a>
 			{% else %}
