--- a/site/templates/twig/purchase-orders/purchase-order/qnotes.twig
+++ b/site/templates/twig/purchase-orders/purchase-order/qnotes.twig
@@ -2,10 +2,9 @@
 	var                    Description / Instance of
 	-------------------------------------------------
 	page                   ProcessWire\Page
-	purchaseorder          PurchaseOrder
+	ponbr                  Purchase Order Number
 	qnotes                 QnotesPo
 #}
-{% set ponbr = purchaseorder.ponbr %}
 {% include 'purchase-orders/purchase-order/qnotes/pord/modal.twig' %}
 {% include 'purchase-orders/purchase-order/qnotes/intl/modal.twig' %}
 {% include 'purchase-orders/purchase-order/qnotes/irev/modal.twig' %}
