--- a/site/templates/twig/items/search-form.twig
+++ b/site/templates/twig/items/search-form.twig
@@ -1,4 +1,4 @@
-<form action="{{ page.searchURL }}" method="get" class="allow-enterkey-submit item-search">
+<form action="{{ input.url() }}" method="get" class="allow-enterkey-submit item-search">
 	<div class="input-group form-group">
 		<input class="form-control form-group inline" type="text" name="q" value="" placeholder="Search Item ID, Description" autofocus>
 		<span class="input-group-btn">
