Use Purchase Orders Controller

--- a/site/templates/twig/purchase-orders/purchase-orders-list-links.twig
+++ b/site/templates/twig/purchase-orders/purchase-orders-list-links.twig
@@ -3,7 +3,7 @@
 	-------------------------------------------------
 	page                   ProcessWire\Page
 	config                 ProcessWire\Config
-	config.po              ConfigPo
+	configPo               ConfigPo
 	orderpage              URL to View PurchaseOrder
 #}
 {% extends "purchase-orders/purchase-orders-list.twig" %}
