--- a/site/templates/twig/purchase-orders/page.twig
+++ b/site/templates/twig/purchase-orders/page.twig
@@ -1,11 +1,9 @@
 {#
 	var                    Description / Instance of
 	-------------------------------------------------
-	item                   ItemMasterItem
 	page                   ProcessWire\Page Current Page
 	input                  ProcessWire\WireInput
-	config                 ProcessWire\Config
-	config.po              ConfigPo
+	configPo               ConfigPo
 	orderpage              Purchase Order Page View URL
 	orders                 PurchaseOrder[]|ObjectCollection
 #}
@@ -23,4 +21,4 @@
 <div class="mb-3">
 	{% include 'purchase-orders/purchase-orders-list-links.twig' %}
 </div>
-{% include 'util/paginator.twig' with {'page': page, 'pagenbr': input.pageNum, 'resultscount': orders.getNbResults()} %}
+{% include 'util/paginator/propel.twig' with {'pager': orders} %}
