--- a/site/templates/twig/purchase-orders/purchase-orders-list.twig
+++ b/site/templates/twig/purchase-orders/purchase-orders-list.twig
@@ -9,13 +9,12 @@
 <div class="list-group-item bg-light font-weight-bold">
 	{% block header %}
 		<div class="form-row">
-			<div class="col">PO Number</div>
+			<div class="col-sm-2">PO Number</div>
 			<div class="col-sm-2">PO Ref</div>
-			<div class="col">Vendor</div>
-			<div class="col">Name</div>
-			<div class="col text-right">Order Total</div>
-			<div class="col text-right">Order Date</div>
-			<div class="col">Status</div>
+			<div class="col-sm-2">Vendor</div>
+			<div class="col-sm-2 text-right">Order Total</div>
+			<div class="col-sm-2 text-right">Order Date</div>
+			<div class="col-sm-1">Status</div>
 		</div>
 	{% endblock %}
 </div>
@@ -23,13 +22,15 @@
 	{% for order in orders %}
 		<a href="{{ page.poUrl(order.ponbr) }}" class="list-group-item list-group-item-action po-link">
 			<div class="form-row">
-				<div class="col">{{ order.ponbr }}</div>
+				<div class="col-sm-2">{{ order.ponbr }}</div>
 				<div class="col-sm-2">{{ order.poref }}</div>
-				<div class="col">{{ order.vendorid }}</div>
-				<div class="col">{{ order.vendor.name }}</div>
-				<div class="col text-right">$ {{ order.get_total()|number_format(configPo.decimal_places_cost) }}</div>
-				<div class="col text-right">{{ order.date_ordered|convertdate }}</div>
-				<div class="col">{{ order.status()|capitalize }}</div>
+				<div class="col-sm-3">
+					{{ order.vendorid }} <br>
+					<small>{{ order.vendor.name }}</small>
+				</div>
+				<div class="col-sm-2 text-right">$ {{ order.get_total()|number_format(configPo.decimal_places_cost) }}</div>
+				<div class="col-sm-2 text-right">{{ order.date_ordered|convertdate }}</div>
+				<div class="col-sm-1">{{ order.status()|capitalize }}</div>
 			</div>
 		</a>
 	{% endfor %}
