--- a/site/templates/twig/min/i2i/list/list.twig
+++ b/site/templates/twig/min/i2i/list/list.twig
@@ -40,7 +40,21 @@
 						{{ xref.childitemid }} <br>
 						<small>{{ xref.childItem().description }}</small>
 					</td>
-					<td></td>
+					<td>
+						{% if i2i.recordlocker.isLocked(i2i.getRecordlockerKey(xref)) == false or i2i.recordlocker.userHasLocked(i2i.getRecordlockerKey(xref)) %}
+							<a href="{{ page.xrefUrl(xref.parentitemid, xref.childitemid) }}" class="btn btn-warning btn-sm">
+								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+							</a>
+							&nbsp; &nbsp;
+							<a href="{{ page.xrefDeleteUrl(xref.parentitemid, xref.childitemid) }}" class="btn btn-danger btn-sm delete_button" data-delete="Item to Item {{ i2i.getRecordlockerKey(xref) }}">
+								<i class="fa fa-trash" aria-hidden="true"></i> Delete
+							</a>
+						{% else %}
+							<span class="badge badge-secondary">
+								<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ i2i.recordlocker.getLockingUser(i2i.getRecordlockerKey(xref)) }}
+							</span>
+						{% endif %}
+					</td>
 				</tr>
 			{% endfor %}
 		</tbody>
