--- a/site/templates/twig/items/itm/form/form-right.twig
+++ b/site/templates/twig/items/itm/form/form-right.twig
@@ -21,7 +21,7 @@
 </div>
 <div class="form-group row">
 	<div class="col-sm-6">
-		<label for="timefence"><abbr title="Days">Time Fence</abbr></label>
+		<label for="timefence">Time Fence</label>
 	</div>
 	<div class="col-sm-6">
 		<input type="number" name="timefence" class="form-control form-control-sm text-right" value="{{ item.timefence }}" id="timefence">
