FIX: Add border to home link

--- a/site/templates/twig/items/itm/itm-links.twig
+++ b/site/templates/twig/items/itm/itm-links.twig
@@ -3,7 +3,7 @@
 {% set segments = input.urlSegments() %}
 
 <ul class="nav nav-pills nav-justified mb-3">
-	<li class="nav-item">
+	<li class="nav-item border">
 		{% if input.urlSegments()|length == 0 %}
 			<a class="nav-link active" href="#">Home</a>
 		{% else %}
