--- a/site/templates/twig/items/itm/form/form-right.twig
+++ b/site/templates/twig/items/itm/form/form-right.twig
@@ -16,7 +16,7 @@
 		<label for="itemtype">Item Type</label>
 	</div>
 	<div class="col-sm-6">
-		{% include 'util/select.twig' with {'name': 'itemtype', 'id': 'itemtype', 'selectedvalue': item.itemtype, 'options': item.get_itemtypedescriptions(), 'capitalize_labels': true } %}
+		{% include 'util/select.twig' with {'name': 'itemtype', 'id': 'itemtype', 'selectedvalue': item.itemtype, 'options': item.get_itemtypedescriptions(), 'capitalize_labels': true, 'hideblankoption': true } %}
 	</div>
 </div>
 <div class="form-group row">
