--- a/site/templates/twig/items/itm/form/form.twig
+++ b/site/templates/twig/items/itm/form/form.twig
@@ -18,22 +18,26 @@
 			{% include 'items/itm/form/form-right.twig' %}
 		</div>
 	</div>
-	<div class="form-group">
-		<div class="d-flex justify-content-between align-items-center">
-			<div>
-				<b>Notes - </b>
-			</div>
-			<div>
-				<b>Order:</b> {{ qnotes.notes.order.anyNotesExist(item.itemid) ? 'Y' : 'N' }}
-			</div>
-			<div>
-				<b>Internal:</b>  {{ qnotes.notes.internal.notes_exist(item.itemid) ? 'Y' : 'N' }}
-			</div>
-			<div>
-				<b>Revision:</b> {{ qnotes.notes.revision.notes_exist(item.itemid) ? 'Y' : 'N' }}
-			</div>
-			<div>
-				<b>Inspection:</b> {{ qnotes.notes.inspection.notes_exist(item.itemid) ? 'Y' : 'N' }}
+	<div class="row">
+		<div class="col-sm-6">
+			<div class="form-group">
+				<div class="d-flex justify-content-between align-items-center">
+					<div>
+						<b>Notes - </b>
+					</div>
+					<div>
+						<b>Order:</b> {{ qnotes.notes.order.anyNotesExist(item.itemid) ? 'Y' : 'N' }}
+					</div>
+					<div>
+						<b>Internal:</b>  {{ qnotes.notes.internal.notes_exist(item.itemid) ? 'Y' : 'N' }}
+					</div>
+					<div>
+						<b>Revision:</b> {{ qnotes.notes.revision.notes_exist(item.itemid) ? 'Y' : 'N' }}
+					</div>
+					<div>
+						<b>Inspection:</b> {{ qnotes.notes.inspection.notes_exist(item.itemid) ? 'Y' : 'N' }}
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
