Add Return to i2i list, focus

--- a/site/templates/twig/min/i2i/list/list.twig
+++ b/site/templates/twig/min/i2i/list/list.twig
@@ -28,7 +28,7 @@
 		</thead>
 		<tbody>
 			{% for xref in xrefs %}
-				<tr>
+				<tr data-key="{{ i2i.getRecordlockerKey(xref) }}">
 					<td>
 						{{ xref.parentitemid }} <br>
 						<small>{{ xref.parentItem().description }}</small>
