FIX: change i2i exists message

--- a/site/templates/twig/min/i2i/xref/form/js/classes/Alerts.js.twig
+++ b/site/templates/twig/min/i2i/xref/form/js/classes/Alerts.js.twig
@@ -11,7 +11,7 @@ class I2iAlerts {
 	xrefExists(parentID, childID, callback) {
 		swal2.fire({
 			title: 'Item to Item Exists',
-			text: 'Edit UPC ' + parentID + ' - '+ childID +'?',
+			text: 'Edit Item to Item ' + parentID + ' - '+ childID +'?',
 			icon: 'question',
 			showCancelButton: true,
 			confirmButtonText: 'Yes'
