FEAT: Create Link for adding new i2i

--- a/site/templates/twig/min/i2i/list/list.twig
+++ b/site/templates/twig/min/i2i/list/list.twig
@@ -23,7 +23,11 @@
 						{% endif %}
 					</a>
 				</th>
-				<th class="py-2"></th>
+				<th class="py-2">
+					<a href="{{ page.xrefNewUrl() }}" class="btn btn-light btn-sm">
+						<i class="fa fa-plus" aria-hidden="true"></i> Add
+					</a>
+				</th>
 			</tr>
 		</thead>
 		<tbody>
